k8s/app/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-app
  namespace: demo
spec:
  selector:
    app: spring-app
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-app
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-app
  template:
    metadata:
      labels:
        app: spring-app
    spec:
      containers:
        - name: app
          image: iam-poc-app:dev
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 4
            periodSeconds: 3

---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: spring-workload-authorization
  namespace: demo
spec:
  selector:
    matchLabels:
      app: spring-app

  action: ALLOW

  rules:
    # Internal Service A
    - from:
        - source:
            principals:
              - "cluster.local/ns/service-a/sa/service-a"
      to:
        - operation:
            methods:
              - GET
            paths:
              - "/api/internal"

    # Existing ingress traffic
    - from:
        - source:
            principals:
              - "cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"
      to:
        - operation:
            paths:
              - "/api/public"
              - "/api/user"
              - "/api/whoami"
              - "/api/headers"
              - "/api/admin"
              - "/actuator/health"
